cod-tools (unreleased)

  * Added:
    - the 'cif_automorphism' script.
    - cif_sort_atoms:
      - the '--record-original-order', '--order-child-loops' options;
      - support for ordering according to values of '_atom_type_*' CIF
        loop.
    - COD::CIF::Data::CODFlags:
      - the has_attached_hydrogens() subroutine.
    - COD::ToolsVersion:
      - the get_version_number() and get_version_string() subroutines.
  * Changed:
    - COD::CIF::Data::AtomList:
      - oxidation state is now read from '_atom_type_oxidation_number'
        CIF data item, if available.
  * Deprecated:
    - COD::ToolsVersion
      - the $COD::ToolsVersion::Version package variable.
  * Fixed:
    - cif_diff:
      - numerically compared values with standard uncertainties are
        unpacked before the comparison.
    - cif_ddlm_dic_check:
      - updated the script to recognise and skip dictionary files that
        belong neither to the 'Reference' nor to the 'Instance' dictionary
        class.
    - cif_Fcalc:
      - added an explicit result output order.

cod-tools (3.1.0)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_from_chemistry_opensmiles() subroutine;
      - the neighbour_list_from_cif() subroutine.
    - COD::CIF::Data::AtomList:
      - updated the atom property extraction logic to determine atom
        oxidation states from atom chemical types and atom names;
      - the 'exclude_hydrogens' option to the atom_array_from_cif()
        subroutine that excludes hydrogen atoms;
      - the get_atom_chemical_type() subroutine.
    - COD::CIF::Tags::Merge:
      - the 'tags' option to the merge_datablocks() subroutine to provide
        a list of data names to merge.
    - cif_filter:
      - distribution of '_publ_author_id_orcid' data item values from
        the global CIF data block to the rest of the data blocks.
    - cif_select:
      - the '--one-data-item-per-row' and '--one-data-item-per-column'
        options.
    - cif_sort_atoms: