@@ -1,1 +1,1 @@
-Tests the way non-unique save frame names are detected and reported.
+Test the way non-unique save frame names are detected and reported.
