@@ -1,1 +1,1 @@
-Tests the way dictionary files of the Template class are handled.
+Test the way dictionary files of the Template class are handled.
