@@ -1,0 +1,94 @@
+#\#CIF_2.0
+##############################################################################
+#                                                                            #
+#     FAKE DICTIONARY WITH MISSING DATA ITEM NAMES FOR TESTING PURPOSES      #
+#                                                                            #
+##############################################################################
+data_FAKE_REDUNDANT_ALIAS_DIC
+_dictionary.title            FAKE_MISSING_NAMES_DIC
+_dictionary.class            Reference
+_dictionary.version          0.1.0
+_dictionary.date             2020-10-12
+_dictionary.uri              http://www.fake.org/fake_missing_names.dic
+_dictionary.ddl_conformance  3.13.1
+_dictionary.namespace        FakeMissingNamesDic
+_description.text
+;
+ This dictionary purposely contains data item definitions with
+ missing data names.
+;
+loop_
+_dictionary_audit.version
+_dictionary_audit.date
+_dictionary_audit.revision
+0.1.0 2020-10-12 'Created the dictionary.'
+
+save_MISSING_NAME_HEAD
+_definition.id               MISSING_NAME_HEAD
+_definition.scope            Category
+_definition.class            HEAD
+_definition.update           2020-10-12
+_description.text
+;
+ The HEAD category of the dictionary.
+;
+_name.category_id            FAKE_MISSING_NAMES_DIC
+_name.object_id              MISSING_NAME_HEAD
+save_
+
+save_MISSING_ITEM_NAMES
+_definition.id               MISSING_ITEM_NAMES
+_definition.scope            Category
+_definition.class            Set
+_definition.update           2020-10-12
+_description.text
+;
+ Data items in the MISSING_ITEM_NAMES category intentionally contain
+ data item definitions without the _definition.id data item.
+;
+_name.category_id            MISSING_NAME_HEAD
+_name.object_id              MISSING_ITEM_NAMES
+save_
+
+save_missing_item_names.item
+_definition.update            2020-10-12
+_description.text
+;
+ Data item definition that does not contain the _definition.id data item.
+;
+_name.category_id             missing_item_names
+_name.object_id               item
+_type.purpose                 Describe
+_type.source                  Assigned
+_type.container               Single
+_type.contents                Text
+save_
+
+save_MISSING_CATEGORY_NAME
+_definition.scope            Category
+_definition.class            Set
+_definition.update           2020-10-12
+_description.text
+;
+ Data items in the MISSING_ITEM_NAMES category intentionally contain
+ data item definitions without the _definition.id data item.
+;
+_name.category_id            MISSING_NAME_HEAD
+_name.object_id              MISSING_CATEGORY_NAME
+save_
+
+save_missing_category_name.item
+_definition.id               'missing_category_name.item'
+_definition.update           2020-10-12
+_description.text
+;
+ Data item definition that belongs to a category that
+ does not the _definition.id data item.
+;
+_name.category_id            missing_category_name
+_name.object_id              item
+_type.purpose                Describe
+_type.source                 Assigned
+_type.container              Single
+_type.contents               Text
+save_
