@@ -1,0 +1,3 @@
+scripts/cif_ddlm_dic_check: tests/cases/cif_ddlm_dic_check_015.inp FAKE_REDUNDANT_ALIAS_DIC: WARNING, the 'missing_item_names.item' save block does not contain the mandatory '_definition.id' data item -- the save block will be ignored in further processing.
+scripts/cif_ddlm_dic_check: tests/cases/cif_ddlm_dic_check_015.inp FAKE_REDUNDANT_ALIAS_DIC: WARNING, the 'MISSING_CATEGORY_NAME' save block does not contain the mandatory '_definition.id' data item -- the save block will be ignored in further processing.
+scripts/cif_ddlm_dic_check: tests/cases/cif_ddlm_dic_check_015.inp data_FAKE_REDUNDANT_ALIAS_DIC save_missing_category_name.item: WARNING, the 'MISSING_CATEGORY_NAME' category could not be located.
