@@ -8,6 +8,11 @@ cod-tools (unreleased)
         loop.
     - COD::CIF::Data::CODFlags:
       - the has_attached_hydrogens() subroutine.
+    - COD::CIF::DDL::DDLm:
+      - the get_all_data_names() subroutine;
+      - a warning message about the treatment of save frames
+        without the _definition.id data item in the build_ddlm_dic
+        subroutine.
     - COD::ToolsVersion:
       - the get_version_number() and get_version_string() subroutines.
   * Changed:
@@ -24,7 +29,9 @@ cod-tools (unreleased)
     - cif_ddlm_dic_check:
       - updated the script to recognise and skip dictionary files that
         belong neither to the 'Reference' nor to the 'Instance' dictionary
-        class.
+        class;
+      - corrected the handling of save frames that do not contain
+        the _definition.id data item.
     - cif_Fcalc:
       - added an explicit result output order.
 
